fixed grid for better alignment for images

--- a/_work/css/grid.css
+++ b/_work/css/grid.css
@@ -7,8 +7,8 @@
 }
 
 .grid {
-	margin-left: 15%;
-	margin-right: 15%;
+	width: 70%;
+	margin: 0 auto;
 }
 
 .grid:after {
@@ -54,11 +54,16 @@ nav:after {
 
 .col-1of3 {
 	width: 33%;
-	margin-left: 0px;
+}
+
+.col-1of3-right {
+	width: 28%;
+	margin-left: 5%;
 }
 
 .col-2of3 {
-	width: 66.666%;
+	width: 61.666%;
+	margin-right:5%;
 }
 
 .col-1of4 {
